--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,49 +8,16 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/length" />
+   <Button
+       android:id="@+id/btn_switch"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="@string/pincah_activity"/>
 
-    <EditText
-        android:id="@+id/edt_length"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:lines="1" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/width" />
-    <EditText
-        android:id="@+id/edt_width"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:lines="1" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/height" />
-    <EditText
-        android:id="@+id/edt_height"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:lines="1" />
-    <Button
-        android:id="@+id/btn_calculate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/calculate" />
-    <TextView
-        android:id="@+id/tv_result"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/result"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+   <Button
+       android:id="@+id/btn_move_data"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:text="@string/pindah_activity_dengan_data"/>
 
 </LinearLayout>
